# opengl-stencil-buffer

./: .gitignore  LICENSE  opengl-stencil-buffer.sln
opengl-stencil-buffer/: CMakeLists.txt  main.cpp  opengl-stencil-buffer.cpp  opengl-stencil-buffer.vcxproj  opengl-stencil-buffer.vcxproj.filters
opengl-stencil-buffer/opengl-s.c206ed88/Debug/: opengl-stencil-buffer.exe.recipe
opengl-stencil-buffer/opengl-s.c206ed88/x64/Debug/opengl-s.c206ed88.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  opengl-stencil-buffer.lastbuildstate
